--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tiktok-transcriber
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: cd app && uvicorn app:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
