--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: tiktok-transcriber
     env: python
-    buildCommand: pip install -r requirements.txt && pip install -e .
-    startCommand: uvicorn app:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: cd app && uvicorn app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
